# viscon-assignment

./: .gitignore  README.md  package.xml
include/rail_detector/: rail_detector_node.hpp  row_counter_node.hpp
launch/: rail_detector_launch.py
rail_detector/: CMakeLists.txt
rail_detector/include/rail_detector/: rail_detector_node.hpp  row_counter_node.hpp
rail_detector/launch/: rail_detector_launch.py
rail_detector/src/: rail_detector_node.cpp  row_counter_node.cpp
src/: rail_detector_node.cpp  row_counter_node.cpp
training/: postprocess_images.py  preprocess_images.py  train_rails.py
training/annotations/: annotations.xml
